--- a/src/components/left-side-panel.css
+++ b/src/components/left-side-panel.css
@@ -11,7 +11,7 @@
   & .left-side-panel__content {
     position: fixed;
     width: var(--left-panel-min-width);
-    top: calc(var(--header-bar-height) + var(--announcement-bar-height)));
+    top: calc(var(--header-bar-height) + var(--search-bar-height) + var(--announcement-bar-height));
     height: calc(100vh - var(--header-bar-height) - var(--search-bar-height) - var(--announcement-bar-height));
     background-color: white;
     overflow-y: auto;
@@ -20,8 +20,8 @@
 
   @media (--short-screen) {
     & .left-side-panel__content {
-      top: calc(var(--header-bar-height) + var(--announcement-bar-height));
-      height: calc(100vh - var(--header-bar-height));
+      top: calc(var(--header-bar-height) + var(--announcement-bar-height) + var(--search-bar-height));
+      height: calc(100vh - var(--header-bar-height) - var(--announcement-bar-height) - var(--search-bar-height));
     }
   }
 
